data_files = [
    '1x1white.png',
    'audioComponentLoadTest.prototype',
    'goLoadTest.prototype',
    'shoot.wav',
    'spriteComponentLoadTest.prototype',
    'testScene.scene'
]

foreach f : data_files
    configure_file(
        input: f,
        output: f,
        copy: true
    )
endforeach